--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,95 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Coin-bar {
+  margin-top: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Coin-searcher {
+  display: inline-block;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  padding: 10px 20px;
+  border: 1px solid #b7b7b7;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: rgba(0,0,0,1);
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  background: rgba(252,252,252,1);
+  -webkit-box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) inset;
+  box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) inset;
+  text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
+  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Coin-text {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 25px;
+}
+
+.Searcher {
+  margin-top: 60px;
+}
+
+.Coin-text {
+  margin-bottom: 10px;
+}
+
+.properties-bar {
+  margin-top: 10px;
+  margin-bottom: -50px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  display: grid;
+  grid-auto-flow: column;
+  border-bottom: 1px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+.properties-bar p {
+  line-height: 2;
+  display: inline-block;
+  vertical-align: middle;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Refresh-button {
+  margin-top: 20px;
+  margin-bottom: 15px;
+  margin-right: 15px;
+  background: #e0e0e0;
+  background-image: -webkit-linear-gradient(top, #e0e0e0, #ffffff);
+  background-image: -moz-linear-gradient(top, #e0e0e0, #ffffff);
+  background-image: -ms-linear-gradient(top, #e0e0e0, #ffffff);
+  background-image: -o-linear-gradient(top, #e0e0e0, #ffffff);
+  background-image: linear-gradient(to bottom, #e0e0e0, #ffffff);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #000000;
+  font-size: 18px;
+  padding: 2px 5px 2px 5px;
+  text-decoration: none;
+}
+
+.Refresh-button:hover {
+  background: #e0e0e0;
+  background-image: -webkit-linear-gradient(top, #e0e0e0, #cccccc);
+  background-image: -moz-linear-gradient(top, #e0e0e0, #cccccc);
+  background-image: -ms-linear-gradient(top, #e0e0e0, #cccccc);
+  background-image: -o-linear-gradient(top, #e0e0e0, #cccccc);
+  background-image: linear-gradient(to bottom, #e0e0e0, #cccccc);
+  text-decoration: none;
+}
+
+.Table-bar {
+  border: 1px solid black;
+  margin-left: 50px;
+  margin-right: 40px;
 }
